--- a/src/index.html
+++ b/src/index.html
@@ -1,20 +1,216 @@
 <!doctype html>
 <html lang="en">
+  <head>
+    <meta charset="utf-8" />
+    <title>
+      Blessing@Lynnwood - Self-Catering Accommodation in Pretoria | Lynnwood Gardens Estate
+    </title>
+    <base href="/" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="icon" type="image/x-icon" href="favicon.ico" />
 
-<head>
-  <meta charset="utf-8">
-  <title>BlessingLynnwood</title>
-  <base href="/">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@300;400;500;600;700&family=Satisfy&display=swap"
-    rel="stylesheet">
-</head>
+    <!-- SEO Meta Tags -->
+    <meta
+      name="description"
+      content="Experience comfortable self-catering accommodation at Blessing@Lynnwood in the secure Lynnwood Gardens Estate, Pretoria. Fully equipped kitchenette, secure parking, WiFi & more."
+    />
+    <meta
+      name="keywords"
+      content="Pretoria accommodation, Lynnwood self-catering, Pretoria guesthouse, Lynnwood Gardens Estate, secure accommodation Pretoria, self-catering apartment Pretoria, business accommodation Pretoria"
+    />
+    <meta name="author" content="Blessing@Lynnwood" />
+    <meta name="robots" content="index, follow" />
+    <link rel="canonical" href="https://myblessing.co.za" />
 
-<body>
-  <app-root></app-root>
-</body>
+    <!-- Open Graph Meta Tags -->
+    <meta
+      property="og:title"
+      content="Blessing@Lynnwood - Comfortable Self-Catering Accommodation in Pretoria"
+    />
+    <meta
+      property="og:description"
+      content="Unwind in our peaceful self-catering accommodation in Lynnwood Gardens Estate. Perfect for business trips, events, or leisure stays with secure parking and modern amenities."
+    />
+    <meta property="og:type" content="business.business" />
+    <meta property="og:url" content="https://myblessing.co.za" />
+    <meta property="og:image" content="https://myblessing.co.za/assets/images/hero-image.webp" />
+    <meta property="og:image:alt" content="Blessing@Lynnwood accommodation exterior view" />
+    <meta property="og:site_name" content="Blessing@Lynnwood" />
+    <meta property="og:locale" content="en_ZA" />
 
+    <!-- Twitter Card Meta Tags -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Blessing@Lynnwood - Self-Catering Accommodation Pretoria" />
+    <meta
+      name="twitter:description"
+      content="Comfortable self-catering accommodation in secure Lynnwood Gardens Estate, Pretoria. Modern amenities, secure parking, perfect for business or leisure."
+    />
+    <meta name="twitter:image" content="https://myblessing.co.za/assets/images/hero-image.webp" />
+    <meta name="twitter:image:alt" content="Blessing@Lynnwood accommodation" />
+
+    <!-- Additional Meta Tags -->
+    <meta name="geo.region" content="ZA-GP" />
+    <meta name="geo.placename" content="Pretoria, Gauteng, South Africa" />
+    <meta name="geo.position" content="-25.760090559877074, 28.263137327236652" />
+    <meta name="ICBM" content="-25.760090559877074, 28.263137327236652" />
+    <meta name="theme-color" content="#8B9467" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Outfit:wght@300;400;500;600;700&family=Satisfy&display=swap"
+      rel="stylesheet"
+    />
+
+    <!-- JSON-LD Structured Data -->
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "LodgingBusiness",
+        "name": "Blessing@Lynnwood",
+        "description": "Comfortable self-catering accommodation in the secure Lynnwood Gardens Estate, Pretoria. Perfect for business trips, events, or leisure stays.",
+        "url": "https://myblessing.co.za",
+        "telephone": "+27-12-361-6888",
+        "email": "divl@icon.co.za",
+        "address": {
+          "@type": "PostalAddress",
+          "streetAddress": "358 Elizabeth Grove South",
+          "addressLocality": "Pretoria",
+          "addressRegion": "Gauteng",
+          "postalCode": "0081",
+          "addressCountry": "ZA"
+        },
+        "geo": {
+          "@type": "GeoCoordinates",
+          "latitude": -25.7479,
+          "longitude": 28.2293
+        },
+        "image": [
+          "https://myblessing.co.za/assets/images/hero-image.webp",
+          "https://myblessing.co.za/assets/images/availability.webp"
+        ],
+        "priceRange": "$$",
+        "currenciesAccepted": ["ZAR", "USD", "EUR"],
+        "paymentAccepted": ["Cash", "Credit Card", "Bank Transfer"],
+        "checkinTime": "15:00",
+        "checkoutTime": "11:00",
+        "petsAllowed": false,
+        "smokingAllowed": false,
+        "amenityFeature": [
+          {
+            "@type": "LocationFeatureSpecification",
+            "name": "Free WiFi",
+            "value": true
+          },
+          {
+            "@type": "LocationFeatureSpecification",
+            "name": "Parking",
+            "value": true
+          },
+          {
+            "@type": "LocationFeatureSpecification",
+            "name": "Kitchen",
+            "value": true
+          },
+          {
+            "@type": "LocationFeatureSpecification",
+            "name": "Air Conditioning",
+            "value": true
+          },
+          {
+            "@type": "LocationFeatureSpecification",
+            "name": "TV",
+            "value": true
+          },
+          {
+            "@type": "LocationFeatureSpecification",
+            "name": "BBQ Facilities",
+            "value": true
+          }
+        ],
+        "starRating": {
+          "@type": "Rating",
+          "ratingValue": "4.5"
+        },
+        "aggregateRating": {
+          "@type": "AggregateRating",
+          "ratingValue": "4.7",
+          "reviewCount": "25",
+          "bestRating": "5",
+          "worstRating": "1"
+        },
+        "review": [
+          {
+            "@type": "Review",
+            "author": {
+              "@type": "Person",
+              "name": "Deon"
+            },
+            "datePublished": "2025-03-01",
+            "reviewBody": "An exceptionally spacious and well-fitted-out apartment in an upmarket and secure residential area. I had a lovely stay with very hospitable hosts. Everything and more than I needed. Could not have asked for better!",
+            "reviewRating": {
+              "@type": "Rating",
+              "ratingValue": "5",
+              "bestRating": "5"
+            }
+          },
+          {
+            "@type": "Review",
+            "author": {
+              "@type": "Person",
+              "name": "Laans"
+            },
+            "datePublished": "2025-03-15",
+            "reviewBody": "This spacious establishment that offers a seperate lounge, seperate toilet and a full bathroom, is in a safe and good area, close to highways, shops and restaurants...",
+            "reviewRating": {
+              "@type": "Rating",
+              "ratingValue": "5",
+              "bestRating": "5"
+            }
+          }
+        ],
+        "containsPlace": [
+          {
+            "@type": "Accommodation",
+            "name": "Self-Catering Apartment",
+            "description": "Spacious self-catering apartment with kitchenette, private bathroom, and modern amenities",
+            "occupancy": {
+              "@type": "QuantitativeValue",
+              "maxValue": 4,
+              "unitText": "persons"
+            }
+          }
+        ],
+        "nearbyAttraction": [
+          {
+            "@type": "TouristAttraction",
+            "name": "Union Buildings",
+            "description": "Historic government buildings and gardens"
+          },
+          {
+            "@type": "ShoppingCenter",
+            "name": "Brooklyn Mall",
+            "description": "Premier shopping destination"
+          },
+          {
+            "@type": "ShoppingCenter",
+            "name": "Menlyn Mall",
+            "description": "Large shopping and entertainment complex"
+          },
+          {
+            "@type": "PerformingArtsTheater",
+            "name": "Fairtree Atterbury Theatre",
+            "description": "Live theatre performances"
+          }
+        ],
+        "sameAs": [
+          "https://www.facebook.com/blessinglynnwood",
+          "https://www.instagram.com/blessinglynnwood"
+        ]
+      }
+    </script>
+  </head>
+
+  <body>
+    <app-root></app-root>
+  </body>
 </html>
